@@ -93,7 +93,7 @@ public final class BSHLiteral extends SimpleNode
                 ch = getEscapeChar(ch);
         }
 
-        value = new Primitive(new Character(ch).charValue());
+        value = new Primitive(Character.valueOf(ch).charValue());
     }
 
     void stringSetup(String str)
